--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 world-population
 ================
 
-7
- 8 0 0    砀 brilliantly colored stone with veined patterns in it
+7 8 0 0    砀 brilliantly colored stone with veined patterns in it
 
 
 https://en.m.wikipedia.org/wiki/World_population
