--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 world-population
 ================
 
-7 8 0 0    砀 brilliantly colored stone with veined patterns in it
-
-
-https://en.m.wikipedia.org/wiki/World_population
+6 B 7 B    死 die; dead; death
+4 E A 1    亡 death, destroyed; lose, perish
+5 9 2 9    天 sky, heaven; god, celestial
+4 F 7 F    使 cause, send on a mission, order; envoy, messenger, ambassador
