--- a/README
+++ b/README
@@ -1,5 +1,12 @@
 world-population
 ================
+0
+
+-------    x(4)
+
+7 4 9 F    璟 luster of gem
+
+-------    hex
 
 6 B 7 B    死 die; dead; death
 4 E A 1    亡 death, destroyed; lose, perish
